fix: alignment for button

--- a/mf_video/static/styles.css
+++ b/mf_video/static/styles.css
@@ -60,6 +60,7 @@ button {
   padding: 10px 20px;
   cursor: pointer;
   border-radius: 2px;
+  align-self: flex-end;
 }
 
 button:hover {
